<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <artifactId>subscriptions-tests</artifactId>
    <packaging>jar</packaging>
    <name>ARLAS subscriptions tests</name>

    <parent>
        <groupId>io.arlas</groupId>
        <artifactId>subscriptions-parent</artifactId>
        <version>19.7.9-SNAPSHOT</version>
    </parent>

    <dependencies>
        <!-- ____________________________________________________ -->
        <!-- ARLAS -->
        <!-- ____________________________________________________ -->
        <dependency>
            <groupId>io.arlas</groupId>
            <artifactId>subscriptions-manager</artifactId>
            <version>${project.parent.version}</version>
        </dependency>

        <dependency>
            <groupId>io.arlas</groupId>
            <artifactId>arlas-server-client</artifactId>
            <version>${project.parent.version}</version>
        </dependency>

        <!-- ____________________________________________________ -->
        <!-- Backends -->
        <!-- ____________________________________________________ -->
        <dependency>
            <groupId>org.apache.kafka</groupId>
            <artifactId>kafka-clients</artifactId>
            <version>${kafka.version}</version>
        </dependency>

        <!-- ____________________________________________________ -->
        <!-- Tests -->
        <!-- ____________________________________________________ -->
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <version>${io.rest-assured.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>